; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/extr_soc-generic-dmaengine-pcm.c_dmaengine_pcm_can_report_residue.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/extr_soc-generic-dmaengine-pcm.c_dmaengine_pcm_can_report_residue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.dma_chan = type { i32 }
%struct.dma_slave_caps = type { i64 }

@.str = private unnamed_addr constant [77 x i8] c"Failed to get DMA channel capabilities, falling back to period counting: %d\0A\00", align 1
@DMA_RESIDUE_GRANULARITY_DESCRIPTOR = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.dma_chan*)* @dmaengine_pcm_can_report_residue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dmaengine_pcm_can_report_residue(%struct.device* %0, %struct.dma_chan* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.dma_chan*, align 8
  %6 = alloca %struct.dma_slave_caps, align 8
  %7 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.dma_chan* %1, %struct.dma_chan** %5, align 8
  %8 = load %struct.dma_chan*, %struct.dma_chan** %5, align 8
  %9 = call i32 @dma_get_slave_caps(%struct.dma_chan* %8, %struct.dma_slave_caps* %6)
  store i32 %9, i32* %7, align 4
  %10 = load i32, i32* %7, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %2
  %13 = load %struct.device*, %struct.device** %4, align 8
  %14 = load i32, i32* %7, align 4
  %15 = call i32 @dev_warn(%struct.device* %13, i8* getelementptr inbounds ([77 x i8], [77 x i8]* @.str, i64 0, i64 0), i32 %14)
  store i32 0, i32* %3, align 4
  br label %23

16:                                               ; preds = %2
  %17 = getelementptr inbounds %struct.dma_slave_caps, %struct.dma_slave_caps* %6, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @DMA_RESIDUE_GRANULARITY_DESCRIPTOR, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %16
  store i32 0, i32* %3, align 4
  br label %23

22:                                               ; preds = %16
  store i32 1, i32* %3, align 4
  br label %23

23:                                               ; preds = %22, %21, %12
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32 @dma_get_slave_caps(%struct.dma_chan*, %struct.dma_slave_caps*) #1

declare dso_local i32 @dev_warn(%struct.device*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
